Fix lyric wrapping (#87)
Don’t line-wrap the lyrics, in order to keep lyrics with their chords even when the line is too long for the window.

--- a/src/SongViewer.css
+++ b/src/SongViewer.css
@@ -14,10 +14,11 @@
   clear: both;
   text-align: left;
   font-size: 36px;
+  white-space: nowrap;
 }
 
 .autoscroller {
-   position: fixed;
-   margin-left: 88%;
-   z-index: 1;
+  position: fixed;
+  margin-left: 88%;
+  z-index: 1;
 }
